--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,11 +3,13 @@
 {% block content %}
 	{% for post in posts %}
 		<div class="post">			
-			<h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+			<h1>{{ post.title }}</a></h1>
 			<p>{{ post.text|linebreaksbr }}</p>
+			{% if post.published_date %}
 			<div class="date">
-				<p>Publicado: {{ post.published_date }}</p>
+				<p>Publicado:{{ post.published_date }}</p>
 			</div>
+			{% endif %}
 		</div>
 	{% endfor %}
 {% endblock content %}
