Porfin sale el EDIT

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,7 @@
 	</head>
 	<body>
 		<div class="page-header">
+			<a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			<h1><u><center>+ Que Un Blog</center></u></h1>
 		</div>
 
