--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -41,7 +41,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-        color: #ffffff;
+        color: #FFFFFF;
         float: right;
         font-size: 26pt;
         margin-right: 20px;
@@ -49,4 +49,5 @@ h1, h2, h3, h4 {
 
 .post {
         margin-bottom: 70px;
+	color: #000000;
 }
