--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,15 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-	{% for post in posts %}
-		<div class="post">			
-			<h1>{{ post.title }}</a></h1>
-			<p>{{ post.text|linebreaksbr }}</p>
-			{% if post.published_date %}
-			<div class="date">
-				<p>Publicado:{{ post.published_date }}</p>
-			</div>
-			{% endif %}
-		</div>
-	{% endfor %}
+	<h1>{{ post.title }}</a></h1>
+	<p>{{ post.text|linebreaksbr }}</p>
+	<div class="date">
+	{% if post.published_date %}
+		{{ post.published_date }}
+	{% endif %}
+	<a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+	</div>			
 {% endblock content %}
