--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,7 +6,7 @@
 			<h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
 			<p>{{ post.text|linebreaksbr }}</p>
 			<div class="date">
-				<p>Publicado: {{ post.published_date }}</p>
+				{{ post.published_date }}
 			</div>
 		</div>
 	{% endfor %}
